<resources>
    <string name="app_name">kalkulator-teori</string>
    
    <string name="btn_CE">CE</string>
    <string name="btn_C">C</string>
    <string name="btn_back">back</string>
    <string name="btn_bagi">/</string>
    <string name="btn_kali">X</string>
    <string name="btn_kurang">-</string>
    <string name="btn_tambah">+</string>
    <string name="btn_hasil">=</string>
    <string name="btn_koma">,</string>
    <string name="btn_negatif">+/-</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_0">0</string>
</resources>