<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="6"
    tools:context=".MainActivity">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="1">
        <TextView
            android:id="@+id/viewKalkulator"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="0"
            android:textSize="170px"
            android:gravity="right|center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="4">
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_CE"
            android:textSize="110px"
            android:layout_marginRight="10px"
            android:layout_marginLeft="10px"
            android:backgroundTint="#c7c7c7"
            android:textColor="@color/black"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_C"
            android:textSize="120px"
            android:layout_marginRight="10px"
            android:layout_marginLeft="10px"
            android:backgroundTint="#c7c7c7"
            android:textColor="@color/black"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_back"
            android:textSize="50px"
            android:layout_marginRight="10px"
            android:layout_marginLeft="10px"
            android:backgroundTint="#c7c7c7"
            android:textColor="@color/black"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_bagi"
            android:textSize="120px"
            android:layout_marginRight="10px"
            android:layout_marginLeft="10px"
            android:backgroundTint="#c7c7c7"
            android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="4">
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_7"
            android:textSize="120px"
            android:layout_marginRight="10px"
            android:layout_marginLeft="10px"
            android:backgroundTint="#c7c7c7"
            android:textColor="@color/black"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_8"
            android:textSize="120px"
            android:layout_marginRight="10px"
            android:layout_marginLeft="10px"
            android:backgroundTint="#c7c7c7"
            android:textColor="@color/black"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_9"
            android:textSize="120px"
            android:layout_marginRight="10px"
            android:layout_marginLeft="10px"
            android:backgroundTint="#c7c7c7"
            android:textColor="@color/black"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_kali"
            android:textSize="120px"
            android:layout_marginRight="10px"
            android:layout_marginLeft="10px"
            android:backgroundTint="#c7c7c7"
            android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="4">
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_4"
            android:textSize="120px"
            android:layout_marginRight="10px"
            android:layout_marginLeft="10px"
            android:backgroundTint="#c7c7c7"
            android:textColor="@color/black"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_5"
            android:textSize="120px"
            android:layout_marginRight="10px"
            android:layout_marginLeft="10px"
            android:backgroundTint="#c7c7c7"
            android:textColor="@color/black"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_6"
            android:textSize="120px"
            android:layout_marginRight="10px"
            android:layout_marginLeft="10px"
            android:backgroundTint="#c7c7c7"
            android:textColor="@color/black"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_kurang"
            android:textSize="120px"
            android:layout_marginRight="10px"
            android:layout_marginLeft="10px"
            android:backgroundTint="#c7c7c7"
            android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="4">
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_1"
            android:textSize="120px"
            android:layout_marginRight="10px"
            android:layout_marginLeft="10px"
            android:backgroundTint="#c7c7c7"
            android:textColor="@color/black"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_2"
            android:textSize="120px"
            android:layout_marginRight="10px"
            android:layout_marginLeft="10px"
            android:backgroundTint="#c7c7c7"
            android:textColor="@color/black"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_3"
            android:textSize="120px"
            android:layout_marginRight="10px"
            android:layout_marginLeft="10px"
            android:backgroundTint="#c7c7c7"
            android:textColor="@color/black"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_tambah"
            android:textSize="120px"
            android:layout_marginRight="10px"
            android:layout_marginLeft="10px"
            android:backgroundTint="#c7c7c7"
            android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="4">
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_negatif"
            android:textSize="100px"
            android:layout_marginRight="10px"
            android:layout_marginLeft="10px"
            android:backgroundTint="#c7c7c7"
            android:textColor="@color/black"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_0"
            android:textSize="120px"
            android:layout_marginRight="10px"
            android:layout_marginLeft="10px"
            android:backgroundTint="#c7c7c7"
            android:textColor="@color/black"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_koma"
            android:textSize="120px"
            android:layout_marginRight="10px"
            android:layout_marginLeft="10px"
            android:backgroundTint="#c7c7c7"
            android:textColor="@color/black"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_hasil"
            android:textSize="120px"
            android:layout_marginRight="10px"
            android:layout_marginLeft="10px"
            android:backgroundTint="#c7c7c7"
            android:textColor="@color/black"/>
    </LinearLayout>
</LinearLayout>